# service2mcp

./: .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  agent.md  conftest.py  devlog.md  new-agent-reading-list.md  noxfile.py  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  web-ui.yml
apps/: __init__.py
apps/access_control/: __init__.py  db.py  main.py  security.py
apps/compiler_api/: __init__.py  db.py  dispatcher.py  main.py  middleware.py  models.py  repository.py  route_publisher.py
apps/compiler_worker/: __init__.py  celery_app.py  deployment_validators.py  entrypoint.py  executor.py  main.py  models.py  observability.py  repository.py
apps/gateway_admin_mock/: __init__.py  main.py
apps/mcp_runtime/: __init__.py  circuit_breaker.py  cli_executor.py  event_bridge.py  grpc_stream.py  grpc_unary.py  loader.py  main.py  observability.py  proxy.py  proxy_enterprise.py  proxy_graphql.py  proxy_http.py  proxy_soap.py  proxy_streaming.py  proxy_utils.py  sql.py  webhook_adapter.py
apps/proof_runner/: __init__.py  grpc_mock.py  http_mock.py  live_llm_e2e.py
apps/web-ui/: .gitignore  Dockerfile  Makefile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
deploy/: docker-compose.yaml
deploy/docker/: Dockerfile.app
deploy/k8s/: web-ui-k3s.yaml
docs/: api-reference.md  architecture.md  bug-audit-backend-static-review.md  bug-scan-2026-03-29-followup.md  bug-scan-2026-03-29.md  bug-scan-20260329-copilot-backend-frontend.md  bug-scan-20260329-copilot.md  bug-sweep-consolidated.md  bug-sweep-ledger.md  bug-sweep-round2.md  bug-sweep-round3.md  bug-sweep-round4.md  extractor-developer-guide.md  ir-composition-guide.md  post-sdd-modular-expansion-plan.md  production-deployment.md  quickstart.md  troubleshooting.md
docs/adr/: 001-ir-as-first-class-artifact.md  002-generic-runtime-default.md  003-pipeline-orchestration-abstraction.md  004-oidc-jwt-auth-and-pats.md  005-semantic-risk-classification.md
docs/v3-expansion/: master-plan.md  stream-a-cli-support.md  stream-b-asyncapi-events.md  stream-c-enterprise-protocols.md  stream-d-ir-evolution.md  stream-e-protocol-deepening.md
libs/: __init__.py  db_models.py  route_config.py  runtime_contracts.py  sample_placeholders.py  secret_refs.py
libs/enhancer/: __init__.py  enhancer.py  error_normalizer.py  examples_generator.py  pagination_inference.py  prompt_generator.py  resource_generator.py  tool_grouping.py  tool_intent.py
libs/extractors/: __init__.py  asyncapi.py  base.py  cli.py  cli_output_parser.py  graphql.py  grpc.py  jsonrpc.py  llm_seed_mutation.py  odata.py  openapi.py  rest.py  rest_classification.py  rest_probing.py  rest_schema.py  scim.py  soap.py  sql.py  utils.py
libs/generator/: __init__.py  codegen_mode.py  generic_mode.py
libs/ir/: __init__.py  compose.py  diff.py  models.py  schema.py  sla.py  transform.py
libs/observability/: __init__.py  logging.py  metrics.py  tracing.py
libs/registry_client/: __init__.py  client.py  models.py
libs/tests/: test_db_models.py  test_route_config.py  test_runtime_contracts.py  test_secret_refs.py
libs/validator/: __init__.py  audit.py  black_box.py  capability_matrix.py  drift.py  llm_judge.py  post_deploy.py  pre_deploy.py
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py  002_add_review_workflows.py  003_scope_review_workflows.py  004_add_auth_user_roles.py  005_harden_service_version_scope_uniqueness.py  005_harden_version_scope.py  006_add_job_service_id.py
observability/grafana/: compilation-dashboard.json  overview-dashboard.json  runtime-dashboard.json  sla-dashboard.json
observability/prometheus/: alerts.yml  recording_rules.yml
scripts/: e2e-real-deepseek-smoke.sh  ir_tool.py  mcp_mass_tool_call.py  setup-dev.sh  smoke-black-box-external.sh  smoke-dev.sh  smoke-gateway-routes.sh  smoke-gke-gateway-routes.sh  smoke-gke-grpc-stream.sh  smoke-gke-llm-e2e.sh  validate_deepseek_enhancer.py
scripts/git-hooks/: pre-push.sample
specs/: service2mcp-unified-spec.md
tests/: conftest.py
tests/contract/: test_api_contracts.py  test_extractor_source_contract.py  test_ir_extractor_contract.py  test_ir_generator_contract.py  test_ir_runtime_contract.py  test_ir_validator_contract.py  test_local_dev_assets.py  test_observability_and_helm_assets.py
tests/e2e/: test_capability_validation_flow.py  test_drift_detection_flow.py  test_extractor_pipeline_flow.py  test_full_compilation_flow.py  test_ir_composition_flow.py  test_ir_transformation_flow.py  test_llm_enhancement_flow.py  test_sla_configuration_flow.py
tests/fixtures/: large_surface_rest_mock.py
tests/integration/: test_access_control_audit.py  test_access_control_authn.py  test_access_control_authz.py  test_access_control_gateway_binding.py  test_artifact_registry.py  test_asyncapi_compilation.py  test_asyncapi_runtime_dispatch.py  test_black_box_validation.py  test_broker_clients.py  test_cli_compilation.py  test_cli_runtime_dispatch.py  test_compile_workflow.py  test_compiler_api.py  test_compiler_worker_activities.py  test_compiler_worker_app.py  test_compiler_worker_entrypoint.py  test_failure_recovery.py  test_graphql_custom_scalars.py  test_grpc_streaming_defaults.py  test_ir_tool_cli.py  test_large_surface_pilot.py  test_mcp_runtime.py  test_mcp_runtime_grpc_stream.py  test_mcp_runtime_grpc_unary.py  test_mcp_runtime_jsonrpc.py  test_mcp_runtime_observability.py  test_mcp_runtime_odata.py  test_mcp_runtime_proxy.py  test_mcp_runtime_resources_prompts.py  test_mcp_runtime_scim.py  test_mcp_runtime_sql.py  test_openapi_external_refs.py  test_openapi_schema_composition.py  test_package_imports.py  test_proof_runner_http_mock.py  test_proof_runner_live_llm_e2e.py  test_rest_generic_collection_discovery.py  test_rollback_workflow.py  test_sla_baselines.py  test_sla_runtime.py  (+3 more)
tests/security/: conftest.py  (+4 more)
(+394 files in other folders)
